# business-model-canvas-agent

./: .dockerignore  CLAUDE.md  GEMINI.md  INSTALL_AND_USAGE.md  README.md  cloudbuild-api.yaml  cloudbuild-ui.yaml  docker-compose.yml
philoagents-api/: .dockerignore  Dockerfile  Dockerfile.prod  pyproject.toml
philoagents-api/src/philoagents/: config.py
philoagents-api/src/philoagents/application/conversation_service/: business_security.py  business_workflow_response.py  langsmith_tracing.py
philoagents-api/src/philoagents/application/conversation_service/workflow/: __init__.py  chains.py  edges.py  graph.py  nodes.py  state.py
philoagents-api/src/philoagents/domain/: __init__.py  business_expert.py  business_expert_factory.py  business_user.py  business_user_factory.py  exceptions.py  prompts.py
philoagents-api/src/philoagents/infrastructure/: api.py
philoagents-ui/: .dockerignore  Dockerfile  Dockerfile.prod  README.md  index.html  nginx.conf
philoagents-ui/public/: simple-profile.js  style.css
philoagents-ui/src/: client-profile.js  main.js  simple-profile.js
philoagents-ui/src/classes/: Character.js  DialogueBox.js  DialogueManager.js  Dropdown.js  InstructionsPanel.js
philoagents-ui/src/scenes/: Game.js  MainMenu.js  PauseMenu.js  Preloader.js
philoagents-ui/src/services/: AdminInterface.js  ApiService.js  ProfileManager.js  WebSocketApiService.js
philoagents-ui/webpack/: config.js  config.prod.js
